manifest/tidb-clsuter/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: tidb-dashboard
  generation: 1
  labels:
  name: tidb-dashboard
  namespace: tidb-cluster
spec:
  ingressClassName: cilium
  rules:
  - host: tidb-dashboard.cluster.orenet.net
    http:
      paths:
      - backend:
          service:
            name: basic-tidb-dashboard-exposed
            port:
              number: 12333
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tidb-dashboard.cluster.orenet.net
    secretName: tidb-dashboard-cert
